# lunr-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
lunr_mcp/: __init__.py  server.py
