[project]
name = "lunr-mcp"
version = "0.1.0"
description = "MCP server for static documentation sites with Lunr.js search indexes"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Olivier JACQUES", email = "ojacques2@gmail.com"}
]
keywords = ["mcp", "lunr", "lunrjs", "documentation", "model-context-protocol", "search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "markdownify>=0.13.0",
]

[project.urls]
Homepage = "https://github.com/ojacques/lunr-mcp"
Repository = "https://github.com/ojacques/lunr-mcp"
Issues = "https://github.com/ojacques/lunr-mcp/issues"

[project.scripts]
lunr-mcp = "lunr_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lunr_mcp"]
